Added spalsh screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Blinkbuy</string>
+    <string name="splash_heading">Get daily essentials in 30 minutes.</string>
 </resources>
