--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Blinkbuy</string>
     <string name="splash_heading">Get daily essentials in 30 minutes.</string>
+    <string name="facebook_app_id">1154027752461972</string>
+    <string name="fb_login_protocol_scheme">fb1154027752461972</string>
+    <string name="facebook_client_token">c8e17de03cdbdb6c788643afae1c9c17</string>
 </resources>
